Added Precision & Recall

--- a/misc/threshold-logistic-regression.ipynb
+++ b/misc/threshold-logistic-regression.ipynb
@@ -135,12 +135,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# F1-score"
+    "# Precision"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best threshold: 0.90\n",
+      "Best precision: 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "# Consider a series of threshold values\n",
+    "thresholds = np.arange(0.05, 1.0, 0.05)\n",
+    "best_threshold = 0.0\n",
+    "best_precision = 0.0\n",
+    "\n",
+    "# Find the best threshold when the precision is maximized\n",
+    "for threshold in thresholds:\n",
+    "    predicted_labels = (y_prob >= threshold).astype(int)\n",
+    "    precision = precision_score(y_true=y_test, y_pred=predicted_labels)\n",
+    "    if precision > best_precision:\n",
+    "        best_threshold = threshold\n",
+    "        best_precision = precision\n",
+    "\n",
+    "print(f\"Best threshold: {best_threshold:.2f}\")\n",
+    "print(f\"Best precision: {best_precision:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best threshold: 0.05\n",
+      "Best recall: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import recall_score\n",
+    "\n",
+    "# Consider a series of threshold values\n",
+    "thresholds = np.arange(0.05, 1.0, 0.05)\n",
+    "best_threshold = 0.0\n",
+    "best_recall = 0.0\n",
+    "\n",
+    "# Find the best threshold when the recall is maximized\n",
+    "for threshold in thresholds:\n",
+    "    predicted_labels = (y_prob >= threshold).astype(int)\n",
+    "    recall = recall_score(y_true=y_test, y_pred=predicted_labels)\n",
+    "    if recall > best_recall:\n",
+    "        best_threshold = threshold\n",
+    "        best_recall = recall\n",
+    "\n",
+    "print(f\"Best threshold: {best_threshold:.2f}\")\n",
+    "print(f\"Best recall: {best_recall:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# F1 score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,11 +241,11 @@
     "from sklearn.metrics import f1_score\n",
     "\n",
     "# Consider a series of threshold values\n",
-    "thresholds = np.arange(0, 1.05, 0.05)\n",
+    "thresholds = np.arange(0.05, 1.0, 0.05)\n",
     "best_threshold = 0.0\n",
     "best_f1 = 0.0\n",
     "\n",
-    "# Find the best threshold and F1 score\n",
+    "# Find the best threshold when the F1 score is maximized\n",
     "for threshold in thresholds:\n",
     "    predicted_labels = (y_prob >= threshold).astype(int)\n",
     "    f1 = f1_score(y_true=y_test, y_pred=predicted_labels)\n",
