Added oversampling, undersampling & evaluation

--- a/misc/data-balancing.ipynb
+++ b/misc/data-balancing.ipynb
@@ -9,23 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "!pip install -q pandas imblearn"
+    "!pip install -q numpy pandas imbalanced-learn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data"
+    "# Original data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -33,28 +42,211 @@
      "output_type": "stream",
      "text": [
       "target\n",
-      "1    71\n",
-      "0    59\n",
-      "2    48\n",
+      "2    112\n",
+      "1     61\n",
+      "0     27\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.datasets import load_wine\n",
     "\n",
-    "# Data\n",
-    "data = load_wine(as_frame=True).frame\n",
+    "# Generate data\n",
+    "data = pd.DataFrame()\n",
+    "seeds = [7, 42, 73, 101]\n",
+    "n_rows = 200\n",
+    "for i, seed in enumerate(seeds):\n",
+    "    np.random.seed(seed)\n",
+    "    data[f\"feature_{i+1}\"] = np.random.randint(0, 10, n_rows)\n",
+    "data[\"target\"] = np.random.choice([0, 1, 2], size=n_rows, p=[0.15, 0.30, 0.55])\n",
     "\n",
-    "# Separate the features and labels\n",
-    "y = data[\"target\"]\n",
     "X = data.drop(\"target\", axis=1)\n",
+    "y = data[\"target\"]\n",
     "\n",
     "# The class distribution\n",
     "class_counts = y.value_counts()\n",
     "print(class_counts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Oversampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target\n",
+      "2    112\n",
+      "1    112\n",
+      "0    112\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "# Craft the Oversampling Potion\n",
+    "oversampler = RandomOverSampler(random_state=42)\n",
+    "\n",
+    "# Perform the spell: Resample the data\n",
+    "X_resampled, y_resampled = oversampler.fit_resample(X, y)\n",
+    "\n",
+    "# Reveal the new class distribution\n",
+    "resampled_class_counts = pd.Series(y_resampled).value_counts()\n",
+    "print(resampled_class_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Undersampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target\n",
+      "0    27\n",
+      "1    27\n",
+      "2    27\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "# Brew the Undersampling Elixir\n",
+    "undersampler = RandomUnderSampler(random_state=42)\n",
+    "\n",
+    "# Cast the spell: Resample the data\n",
+    "X_resampled, y_resampled = undersampler.fit_resample(X, y)\n",
+    "\n",
+    "# Unveil the new class distribution\n",
+    "resampled_class_counts = pd.Series(y_resampled).value_counts()\n",
+    "print(resampled_class_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target\n",
+      "2    112\n",
+      "1    112\n",
+      "0    112\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Prepare the Cauldron for SMOTE\n",
+    "smote = SMOTE(random_state=42)\n",
+    "\n",
+    "# Unleash the enchantment: Resample the data\n",
+    "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
+    "\n",
+    "# Reveal the new class distribution\n",
+    "resampled_class_counts = pd.Series(y_resampled).value_counts()\n",
+    "print(resampled_class_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split the dataset into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores: [0.378, 0.25, 0.214, 0.197, 0.444]\n",
+      "Mean F1-score: 0.296\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Create a KNN classifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# Perform cross-validation\n",
+    "scores = cross_val_score(knn, X_train, y_train, cv=5, scoring=\"f1_macro\")\n",
+    "\n",
+    "# Display the scores\n",
+    "print(\"Cross-Validation Scores:\", [round(score, 3) for score in scores])\n",
+    "print(\"Mean F1-score:\", round(scores.mean(), 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
