--- a/misc/data-balancing.ipynb
+++ b/misc/data-balancing.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -q numpy pandas imbalanced-learn"
    ]
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,20 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Split the dataset into train and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
    "outputs": [
@@ -220,8 +197,13 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Split the dataset into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
     "\n",
     "# Create a KNN classifier\n",
     "knn = KNeighborsClassifier()\n",
@@ -238,15 +220,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ensemble"
+    "# Ensemble method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.25      0.25      0.25         4\n",
+      "           1       0.40      0.12      0.19        16\n",
+      "           2       0.48      0.75      0.59        20\n",
+      "\n",
+      "    accuracy                           0.45        40\n",
+      "   macro avg       0.38      0.38      0.34        40\n",
+      "weighted avg       0.43      0.45      0.40        40\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Split the dataset into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Create the model\n",
+    "rf_classifier = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Train the model\n",
+    "rf_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = rf_classifier.predict(X_test)\n",
+    "\n",
+    "# Assess the performance\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report:\\n\", report)"
+   ]
   }
  ],
  "metadata": {
@@ -265,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
