Truncate list of emojis

--- a/formatting/rich/rich.ipynb
+++ b/formatting/rich/rich.ipynb
@@ -731,51 +731,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st_place_medal: 🥇\n",
+      "2nd_place_medal: 🥈\n",
+      "3rd_place_medal: 🥉\n",
+      "ab_button_(blood_type): 🆎\n",
+      "atm_sign: 🏧\n",
+      "a_button_(blood_type): 🅰\n",
+      "afghanistan: 🇦🇫\n",
+      "albania: 🇦🇱\n",
+      "algeria: 🇩🇿\n",
+      "american_samoa: 🇦🇸\n"
+     ]
+    }
+   ],
    "source": [
     "from rich.emoji import EMOJI\n",
     "\n",
-    "# Print all available emojis\n",
-    "for emoji_name in EMOJI:\n",
-    "    print(f\"{emoji_name} {EMOJI[emoji_name]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1st_place_medal 🥇\n",
-    "2nd_place_medal 🥈\n",
-    "3rd_place_medal 🥉\n",
-    "ab_button_(blood_type) 🆎\n",
-    "atm_sign 🏧\n",
-    "a_button_(blood_type) 🅰\n",
-    "afghanistan 🇦🇫\n",
-    "albania 🇦🇱\n",
-    "algeria 🇩🇿\n",
-    "american_samoa 🇦🇸\n",
-    "andorra 🇦🇩\n",
-    "angola 🇦🇴\n",
-    "anguilla 🇦🇮\n",
-    "antarctica 🇦🇶\n",
-    "antigua_&_barbuda 🇦🇬\n",
-    "aquarius ♒\n",
-    "argentina 🇦🇷\n",
-    "aries ♈\n",
-    "armenia 🇦🇲\n",
-    "aruba 🇦🇼\n",
-    "ascension_island 🇦🇨\n",
-    "australia 🇦🇺\n",
-    "austria 🇦🇹\n",
-    "azerbaijan 🇦🇿\n",
-    "back_arrow 🔙\n",
-    "...\n",
-    "regional_indicator_w 🇼\n",
-    "regional_indicator_x 🇽\n",
-    "regional_indicator_y 🇾\n",
-    "regional_indicator_z 🇿"
+    "# Uncomment to print all available emojis\n",
+    "# for name, emoji in EMOJI.items():\n",
+    "#     print(f\"{name}: {emoji}\")\n",
+    "\n",
+    "# Print the first N emojis\n",
+    "N = 10\n",
+    "for name, emoji in list(EMOJI.items())[:N]:\n",
+    "    print(f\"{name}: {emoji}\")"
    ]
   },
   {
