Rearrange ants-bees-classification

--- a/computer-vision/ants-bees-classification/image-classification.ipynb
+++ b/computer-vision/ants-bees-classification/image-classification.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Click [here](https://medium.com/@morihosseini/make-an-image-classification-app-9ce4904b2d38) to access the associated Medium article."
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
