Added Medium article link

--- a/data-visualization/lets-plot/codebook.ipynb
+++ b/data-visualization/lets-plot/codebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click [here](https://medium.com/@morihosseini/unleashing-pythons-captivating-visualization-power-with-lets-plot-92e7f1049e74) to access the associated Medium article."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
