Added Medium article link

--- a/scrape/jobinventory.com/tutorial.ipynb
+++ b/scrape/jobinventory.com/tutorial.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click [here](https://medium.com/@morihosseini/python-web-scraping-a-beginners-guide-to-scraping-job-listings-9d185855e7cb) to access the associated Medium article."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
