--- a/synthetic-data/intro.ipynb
+++ b/synthetic-data/intro.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click [here](https://medium.com/@morihosseini/synthetic-data-unleashing-possibilities-42eadd5c2fbb) to access the associated Medium article."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Faker"
    ]
   },
