--- a/xai/intro.ipynb
+++ b/xai/intro.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Click [here](https://medium.com/@morihosseini/explainable-ai-the-future-of-machine-learning-d8b843ad8bf7) to access the associated Medium article."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# SHAP"
    ]
   },
