--- a/time-series/prevent-overfitting.ipynb
+++ b/time-series/prevent-overfitting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/taming-overfitting-in-time-series-data-92ed47b729bb) to access the associated Medium article."
    ]
   },
   {
