Added more sections

--- a/anomaly-detection/fraud-detection.ipynb
+++ b/anomaly-detection/fraud-detection.ipynb
@@ -8,21 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find class weights for imbalanced dataset\n",
-    "import numpy as np\n",
-    "from sklearn.utils import class_weight\n",
-    "\n",
-    "y = np.array([0, 0, 0, 0, 0, 0, 1, 1, 1, 1])\n",
-    "class_weights = class_weight.compute_class_weight(class_weight='balanced', classes=np.unique(y), y=y)\n",
-    "class_weights"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "!pip install -q scipy pandas matplotlib scikit-learn tensorflow keras"
    ]
@@ -47,22 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('credit_card.arff', <http.client.HTTPMessage at 0x10674d490>)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import urllib.request\n",
+    "from urllib.request import urlretrieve\n",
     "\n",
     "# Download the dataset to the current directory (149 MB)\n",
     "# Source: https://www.openml.org/search?type=data&id=43627\n",
     "url = \"https://www.openml.org/data/download/22102452\"\n",
     "file_name = \"credit_card.arff\"\n",
-    "urllib.request.urlretrieve(url, file_name)"
+    "urlretrieve(url, file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,57 +187,9 @@
        "      <td>378.66</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.966272</td>\n",
-       "      <td>-0.185226</td>\n",
-       "      <td>1.792993</td>\n",
-       "      <td>-0.863291</td>\n",
-       "      <td>-0.010309</td>\n",
-       "      <td>1.247203</td>\n",
-       "      <td>0.237609</td>\n",
-       "      <td>0.377436</td>\n",
-       "      <td>-1.387024</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.108300</td>\n",
-       "      <td>0.005274</td>\n",
-       "      <td>-0.190321</td>\n",
-       "      <td>-1.175575</td>\n",
-       "      <td>0.647376</td>\n",
-       "      <td>-0.221929</td>\n",
-       "      <td>0.062723</td>\n",
-       "      <td>0.061458</td>\n",
-       "      <td>123.50</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-1.158233</td>\n",
-       "      <td>0.877737</td>\n",
-       "      <td>1.548718</td>\n",
-       "      <td>0.403034</td>\n",
-       "      <td>-0.407193</td>\n",
-       "      <td>0.095921</td>\n",
-       "      <td>0.592941</td>\n",
-       "      <td>-0.270533</td>\n",
-       "      <td>0.817739</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.009431</td>\n",
-       "      <td>0.798278</td>\n",
-       "      <td>-0.137458</td>\n",
-       "      <td>0.141267</td>\n",
-       "      <td>-0.206010</td>\n",
-       "      <td>0.502292</td>\n",
-       "      <td>0.219422</td>\n",
-       "      <td>0.215153</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>3 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -240,27 +197,21 @@
        "0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  0.462388  0.239599   \n",
        "1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018 -0.082361 -0.078803   \n",
        "2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  1.800499  0.791461   \n",
-       "3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  1.247203  0.237609   \n",
-       "4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  0.095921  0.592941   \n",
        "\n",
        "         V8        V9  ...       V21       V22       V23       V24       V25  \\\n",
        "0  0.098698  0.363787  ... -0.018307  0.277838 -0.110474  0.066928  0.128539   \n",
        "1  0.085102 -0.255425  ... -0.225775 -0.638672  0.101288 -0.339846  0.167170   \n",
        "2  0.247676 -1.514654  ...  0.247998  0.771679  0.909412 -0.689281 -0.327642   \n",
-       "3  0.377436 -1.387024  ... -0.108300  0.005274 -0.190321 -1.175575  0.647376   \n",
-       "4 -0.270533  0.817739  ... -0.009431  0.798278 -0.137458  0.141267 -0.206010   \n",
        "\n",
        "        V26       V27       V28  Amount  Class  \n",
        "0 -0.189115  0.133558 -0.021053  149.62    0.0  \n",
        "1  0.125895 -0.008983  0.014724    2.69    0.0  \n",
        "2 -0.139097 -0.055353 -0.059752  378.66    0.0  \n",
-       "3 -0.221929  0.062723  0.061458  123.50    0.0  \n",
-       "4  0.502292  0.219422  0.215153   69.99    0.0  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,12 +224,12 @@
     "data_arff = arff.loadarff(\"credit_card.arff\")\n",
     "data = pd.DataFrame(data_arff[0])\n",
     "\n",
-    "data.head()"
+    "data.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -446,6 +397,148 @@
    "source": [
     "## Train-Test Splitting"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Separate features and target variable\n",
+    "X = data.drop(\"Class\", axis=1)\n",
+    "y = data[\"Class\"]\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class Weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class weights: {0.0: 0.5008661206149896, 1.0: 289.14340101522845}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "import numpy as np\n",
+    "\n",
+    "# Get the unique classes\n",
+    "unique_classes = np.unique(y_train)\n",
+    "\n",
+    "# Calculate class weights\n",
+    "class_weights_array = compute_class_weight(\n",
+    "    class_weight=\"balanced\", classes=unique_classes, y=y_train\n",
+    ")\n",
+    "\n",
+    "# Convert class weights to a dictionary for model training\n",
+    "class_weights = dict(zip(unique_classes, class_weights_array))\n",
+    "print(f\"Class weights: {class_weights}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Initialize the scaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit and transform the scaler on training data\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "# Transform the test data using the same scaler\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building a Binary Classification Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 256)               7936      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 256)               65792     \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 256)               65792     \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 256)               0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 257       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 139777 (546.00 KB)\n",
+      "Trainable params: 139777 (546.00 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "\n",
+    "dropout_rate = 0.25\n",
+    "\n",
+    "# Define the model\n",
+    "model = Sequential(\n",
+    "    [\n",
+    "        Dense(256, activation=\"relu\", input_shape=(X_train.shape[-1],)),\n",
+    "        Dense(256, activation=\"relu\"),\n",
+    "        Dropout(dropout_rate),\n",
+    "        Dense(256, activation=\"relu\"),\n",
+    "        Dropout(dropout_rate),\n",
+    "        Dense(1, activation=\"sigmoid\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Summarize the model\n",
+    "model.summary()"
+   ]
   }
  ],
  "metadata": {
@@ -464,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
