--- a/anomaly-detection/fraud-detection.ipynb
+++ b/anomaly-detection/fraud-detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/detecting-credit-card-fraud-with-keras-a-comprehensive-guide-8034f1330483) to access the associated Medium article."
    ]
   },
   {
@@ -871,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
