--- a/time-series/sktime.ipynb
+++ b/time-series/sktime.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/mastering-time-series-forecasting-with-sktime-e8b96592cdb1) to access the associated Medium article."
    ]
   },
   {
