Added Medium article link

--- a/eda/missing-data.ipynb
+++ b/eda/missing-data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/dealing-with-missing-data-like-a-pro-an-adventure-in-python-c37e90ff118f) to access the associated Medium article."
    ]
   },
   {
