--- a/eda/data-balancing.ipynb
+++ b/eda/data-balancing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/taming-the-data-imbalance-monster-with-python-magic-32ec203940a6) to access the associated Medium article."
    ]
   },
   {
