Reorganised. Added stats.

--- a/stats/ab-test.ipynb
+++ b/stats/ab-test.ipynb
@@ -28,7 +28,7 @@
     "!source .venv/bin/activate  # for macOS and Linux\n",
     "# !.venv\\Scripts\\activate.bat  # for Windows\n",
     "\n",
-    "!pip install -q -r requirements.txt"
+    "!pip install -q numpy pandas scipy matplotlib"
    ]
   },
   {
