Added experiment 4 and report

--- a/stats/pvalue-around-0.05.ipynb
+++ b/stats/pvalue-around-0.05.ipynb
@@ -16,32 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scipy in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (1.10.1)\n",
-      "Requirement already satisfied: numpy in /Users/mori/Desktop/portfolio/.venv/lib/python3.11/site-packages (1.24.3)\n",
-      "\u001b[33mDEPRECATION: textract 1.6.5 has a non-standard dependency specifier extract-msg<=0.29.*. pip 23.3 will enforce this behaviour change. A possible replacement is to upgrade to a newer version of textract or contact the author to suggest that they release a version with a conforming dependency specifiers. Discussion can be found at https://github.com/pypa/pip/issues/12063\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install scipy numpy"
+    "!pip install -q numpy scipy statsmodels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.stats as stats\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.api as sm\n",
     "\n",
     "# Set seed for reproducibility\n",
     "np.random.seed(7)"
@@ -223,6 +214,130 @@
    "source": [
     "# Experiment 4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:        JobSatisfaction   R-squared:                       0.023\n",
+      "Model:                            OLS   Adj. R-squared:                  0.013\n",
+      "Method:                 Least Squares   F-statistic:                     2.274\n",
+      "Date:                Tue, 05 Sep 2023   Prob (F-statistic):              0.135\n",
+      "Time:                        09:59:44   Log-Likelihood:                -184.97\n",
+      "No. Observations:                 100   AIC:                             373.9\n",
+      "Df Residuals:                      98   BIC:                             379.2\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "const              1.7245      0.288      5.990      0.000       1.153       2.296\n",
+      "YearsAtCompany     0.0791      0.052      1.508      0.135      -0.025       0.183\n",
+      "==============================================================================\n",
+      "Omnibus:                      130.047   Durbin-Watson:                   2.303\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):                8.823\n",
+      "Skew:                          -0.103   Prob(JB):                       0.0121\n",
+      "Kurtosis:                       1.559   Cond. No.                         10.4\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Synthetic dataset\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"YearsAtCompany\": np.random.randint(0, 10, 100),\n",
+    "        \"JobSatisfaction\": np.random.randint(0, 5, 100),\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Specify our independent and dependent variables\n",
+    "X = df[\"YearsAtCompany\"]\n",
+    "y = df[\"JobSatisfaction\"]\n",
+    "\n",
+    "# Add an intercept to the independent variable\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit the Ordinary Least Squares Model (OLS)\n",
+    "model = sm.OLS(y, X)\n",
+    "results = model.fit()\n",
+    "\n",
+    "# Summary Statistics\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const             3.481591e-08\n",
+       "YearsAtCompany    1.348070e-01\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.pvalues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Our analysis yielded a p-value 0.051, which is close to our alpha level\n",
+      "set at 0.05. Despite its borderline significance, a look at the effect size\n",
+      "and confidence intervals reveals that our findings hold practical\n",
+      "significance. Here, we discuss these findings in further depth--taking into\n",
+      "account the practical implications and real-world context.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reporting example\n",
+    "p_value = 0.051\n",
+    "\n",
+    "report = f\"\"\"\n",
+    "Our analysis yielded a p-value {p_value:.3f}, which is close to our alpha level\n",
+    "set at 0.05. Despite its borderline significance, a look at the effect size\n",
+    "and confidence intervals reveals that our findings hold practical\n",
+    "significance. Here, we discuss these findings in further depth--taking into\n",
+    "account the practical implications and real-world context.\n",
+    "\"\"\"\n",
+    "\n",
+    "print(report)"
+   ]
   }
  ],
  "metadata": {
@@ -241,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
