--- a/stats/pvalue-around-0.05.ipynb
+++ b/stats/pvalue-around-0.05.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/to-reject-or-not-to-reject-navigating-p-values-near-0-05-2d2e68affd8c) to access the associated Medium article."
    ]
   },
   {
