--- a/data-visualization/pitfalls/pitfalls.ipynb
+++ b/data-visualization/pitfalls/pitfalls.ipynb
@@ -46,7 +46,7 @@
     "    image_path.mkdir(exist_ok=True)\n",
     "\n",
     "# Plot style\n",
-    "plt.style.use(\"plot_style/ggplot_classic.mplstyle\")\n",
+    "plt.style.use(\"ggplot_classic.mplstyle\")\n",
     "\n",
     "# Seed for reproducibility\n",
     "SEED = 7"
