--- a/eda/polars.ipynb
+++ b/eda/polars.ipynb
@@ -65,12 +65,16 @@
     "    range(40, 71), k=size - size // 2\n",
     ")\n",
     "city = random.choices(\n",
-    "    [\"New York\", \"London\", \"Paris\", \"Tokyo\"], weights=[1.0, 0.9, 0.3, 1.5], k=size\n",
+    "    [\"New York\", \"London\", \"Paris\", \"Tokyo\"],\n",
+    "    weights=[1.0, 0.9, 0.3, 1.5],\n",
+    "    k=size,\n",
     ")\n",
     "is_married = random.choices([True, False], weights=[1.0, 1.5], k=size)\n",
     "bmi = [round(random.uniform(17.0, 27.0), 2) for _ in range(size)]\n",
     "\n",
-    "df = pl.DataFrame({\"age\": age, \"city\": city, \"is_married\": is_married, \"bmi\": bmi})"
+    "df = pl.DataFrame(\n",
+    "    {\"age\": age, \"city\": city, \"is_married\": is_married, \"bmi\": bmi}\n",
+    ")"
    ]
   },
   {
@@ -209,7 +213,9 @@
     "# Create some missing data.\n",
     "# Whenever 'age' is over 68, corresponding 'bmi' becomes 'null'\n",
     "df = df.with_columns(\n",
-    "    pl.when(pl.col(\"age\") > 68).then(None).otherwise(pl.col(\"bmi\")).alias(\"bmi\")\n",
+    "    pl.when(pl.col(\"age\") > 68).then(None).otherwise(pl.col(\"bmi\")).alias(\n",
+    "        \"bmi\"\n",
+    "    )\n",
     ")"
    ]
   },
