Added Medium article

--- a/misc/qrcode.ipynb
+++ b/misc/qrcode.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/qr-code-mastery-with-python-qrcode-89641f53aca7) to access the associated Medium article."
    ]
   },
   {
