Replace unicode char with &mdash;

--- a/stats/ab-test.ipynb
+++ b/stats/ab-test.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This plot shows the mean difference between the two groups as a dot, with the confidence interval as vertical lines above and below the dot. If the confidence interval does not include zero, we can conclude that the difference in means between the two groups is statistically significant — which is clearly not the case here.\n",
+    "This plot shows the mean difference between the two groups as a dot, with the confidence interval as vertical lines above and below the dot. If the confidence interval does not include zero, we can conclude that the difference in means between the two groups is statistically significant&mdash;which is clearly not the case here.\n",
     "\n",
     "## Drawing conclusions from the test results\n",
     "\n",
