--- a/eda/polars.ipynb
+++ b/eda/polars.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/data-mastery-polars-unpacked-c9718261aa15) to access the associated Medium article."
    ]
   },
   {
