--- a/hyper-optim/kerasTuner.ipynb
+++ b/hyper-optim/kerasTuner.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/hyperparameter-tuning-made-easy-with-kerastuner-b99b903e8a6c) to access the associated Medium article."
    ]
   },
   {
