--- a/data-structure/sorting-popular.ipynb
+++ b/data-structure/sorting-popular.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/from-chaos-to-order-a-guide-to-sorting-362ffc0cd621) to access the associated Medium article."
    ]
   },
   {
