Update Medium article link

--- a/privacy/anonymization.ipynb
+++ b/privacy/anonymization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article.\n"
+    "Click [here](https://medium.com/@morihosseini/get-started-with-data-anonymization-40ee967152fd) to access the associated Medium article."
    ]
   },
   {
