Update Medium article link in lambda.ipynb.

--- a/python/lambda.ipynb
+++ b/python/lambda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/lambda-the-haiku-of-python-functions-4355e41f783d) to access the associated Medium article."
    ]
   },
   {
