Add Medium article link

--- a/hypertune/optuna.ipynb
+++ b/hypertune/optuna.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/hyperparameter-optimization-with-optuna-d5b50e22f4d6) to access the associated Medium article."
    ]
   },
   {
