--- a/terminal/jq.ipynb
+++ b/terminal/jq.ipynb
@@ -16,38 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running `brew update --auto-update`...\n",
-      "\u001b[34m==>\u001b[0m \u001b[1mAuto-updated Homebrew!\u001b[0m\n",
-      "Updated 4 taps (jandedobbeleer/oh-my-posh, homebrew/cask-fonts, homebrew/core and homebrew/cask).\n",
-      "\u001b[34m==>\u001b[0m \u001b[1mNew Formulae\u001b[0m\n",
-      "dotslash                   magic-wormhole.rs          proto\n",
-      "ktfmt                      moon                       seam\n",
-      "\u001b[34m==>\u001b[0m \u001b[1mNew Casks\u001b[0m\n",
-      "cleanclip                  freeshow                   upscayl\n",
-      "elecom-mouse-util          ollamac\n",
-      "\n",
-      "You have \u001b[1m33\u001b[0m outdated formulae installed.\n",
-      "\n",
-      "\u001b[33mWarning:\u001b[0m jq 1.7.1 is already installed and up-to-date.\n",
-      "To reinstall 1.7.1, run:\n",
-      "  brew reinstall jq\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!brew install jq"
+    "!brew install -q jq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
