Add Medium article link

--- a/python/match-case.ipynb
+++ b/python/match-case.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/mastering-pattern-matching-with-match-case-in-python-16b77acdb1db) to access the associated Medium article."
    ]
   },
   {
