--- a/terminal/jq.ipynb
+++ b/terminal/jq.ipynb
@@ -494,6 +494,113 @@
    "source": [
     "!echo '{\"name\": \"Alice\", \"age\": 30}' | jq '.city'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FAQs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** How can I extract specific elements from a deeply nested JSON structure using jq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;39m{\n",
+      "  \u001b[0m\u001b[1;34m\"city\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;32m\"New York\"\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[0m\u001b[1;34m\"street\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;32m\"123 Main St\"\u001b[0m\u001b[1;39m\n",
+      "\u001b[1;39m}\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo '{\"person\": [{\"name\": \"Alice\", \"address\": {\"city\": \"New York\", \"street\": \"123 Main St\"}}, {\"name\": \"Bob\", \"address\": {\"city\": \"Los Angeles\", \"street\": \"456 Elm St\"}}]}' | jq '.person[].address | select(.city == \"New York\")'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** How do I modify and update values within a JSON object using jq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo '{\"product\": {\"name\": \"Widget\", \"price\": 25.99, \"category\": \"Electronics\"}}' | jq '.product.price = 29.99' > output.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** Can jq aggregate data within JSON arrays?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;39m70\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo '{\"product\": [{\"name\": \"Widget\", \"price\": 20, \"category\": \"Electronics\"}, {\"name\": \"Gadget\", \"price\": 50, \"category\": \"Electronics\"}]}' | jq 'map(.[].price) | add'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Q:** How can I filter and extract specific elements from JSON arrays using jq?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;39m[\n",
+      "  \u001b[1;39m{\n",
+      "    \u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;32m\"Product B\"\u001b[0m\u001b[1;39m,\n",
+      "    \u001b[0m\u001b[1;34m\"price\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;39m69.99\u001b[0m\u001b[1;39m\n",
+      "  \u001b[1;39m}\u001b[0m\u001b[1;39m,\n",
+      "  \u001b[1;39m{\n",
+      "    \u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;32m\"Product C\"\u001b[0m\u001b[1;39m,\n",
+      "    \u001b[0m\u001b[1;34m\"price\"\u001b[0m\u001b[1;39m: \u001b[0m\u001b[0;39m89.99\u001b[0m\u001b[1;39m\n",
+      "  \u001b[1;39m}\u001b[0m\u001b[1;39m\n",
+      "\u001b[1;39m]\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!echo '[{\"name\": \"Product A\", \"price\": 49.99}, {\"name\": \"Product B\", \"price\": 69.99}, {\"name\": \"Product C\", \"price\": 89.99}]' | jq 'map(select(.price > 50))'"
+   ]
   }
  ],
  "metadata": {
@@ -512,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
