--- a/data-structure/hashing.ipynb
+++ b/data-structure/hashing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://morihosseini.medium.com/hashing-in-python-8c7265c0e619) to access the associated Medium article."
    ]
   },
   {
