--- a/python/generator.ipynb
+++ b/python/generator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article.\n"
+    "Click [here](https://medium.com/@morihosseini/a-hands-on-guide-to-python-generators-fd239b066750) to access the associated Medium article."
    ]
   },
   {
