Add argparse Medium article link

--- a/python/argparse.ipynb
+++ b/python/argparse.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/python-argparse-crafting-elegant-command-line-interfaces-21e7c40ccc91) to access the associated Medium article."
    ]
   },
   {
