--- a/python/calendar.ipynb
+++ b/python/calendar.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Click [here]() to access the associated Medium article."
+    "Click [here](https://medium.com/@morihosseini/from-dates-to-holidays-demystifying-the-calendar-module-in-python-4ec10e9fd7e0) to access the associated Medium article."
    ]
   },
   {
